# StarRailRelicScore

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: update.yml
compiler/: exportMetadata.test.ts  get_character_promotions.py  get_game_data.py  get_metadata.py  get_relic_config.py  main.py  package.json  vitest.config.ts
compiler/hsr-optimizer-api/: package.json  pnpm-lock.yaml  tsconfig.json
compiler/hsr-optimizer-api/src/: index.ts
compiler/hsr-optimizer-api/src/lib/: dataParser.js
compiler/hsr-optimizer-api/src/lib/optimization/: sortOptions.ts
compiler/hsr-optimizer-api/src/lib/state/: metadata.ts
src/starrailrelicscore/: errors.py
src/starrailrelicscore/client/: character.py  db.py  relic.py  relic_scorer.py  relic_scorer_data.py
src/starrailrelicscore/data/: character_data.py  constants.json  constants.py  metadata.json  metadata.py  metadata_export.json  relic_config.json  relic_config.py
src/starrailrelicscore/models/: enums.py  mihomo.py  relic_affix.py  relic_scorer.py
tests/: test_get_scoring_metadata.py  test_score_character.py
