[project]
name = "StarRailRelicScore"
version = "0.1.0"
description = "StarRail Relic Score Cal"
authors = [
    {name = "xtaodada", email = "xtao@xtaolink.cn"},
]
dependencies = [
    "pydantic<2.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPL 3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]
