[project]
name = "StarRailRelicScore"
version = "0.3.0"
description = "StarRail Relic Score Cal"
authors = [
    {name = "xtaodada", email = "xtao@xtao.de"},
]
dependencies = [
    "pydantic<3.0.0,>=2.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPL 3.0"}

[tool.hatch.build]
packages = ["src/starrailrelicscore"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff",
]
